--- a/projects/index.html
+++ b/projects/index.html
@@ -24,7 +24,7 @@
 <body>
 	<h1>Coming Soon!</h1>
 	<p>Thank you for visiting my website. I am currently working hard on some amazing projects that I can't wait to share with you.</p>
-	<p>While you're here, please feel free to check out the rest of my site to get a better feel for what I'm all about.</p>
+	<p>While you're here, please feel free to check out the rest of my site to get a better feel for what I'm all about. If you want be sure also to take a look at my Twitter and GitHub Profiles</p>
 	<a href="https://lucazani.com/"><button>Visit Home Page</button></a>
 </body>
 </html>
